@@ -1,85 +1,46 @@
 package org.example.modules.baseModules;
 
 import com.opencsv.exceptions.CsvValidationException;
-import org.example.concepts.*;
 import org.example.concepts.Module;
+import org.example.concepts.attributes.AgeGroup;
+import org.example.concepts.attributes.Country;
+import org.example.concepts.attributes.Gender;
+import org.example.concepts.attributes.Patient;
 import org.example.helper.CsvLoader;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
 public class ModuleBaseAttributes extends Module {
 
-    private int minAge;
-    private int maxAge;
+    private final int minAge;
+    private final int maxAge;
     private final List<Gender> genders;
     private final List<Country> countries;
     private final List<String[]> csvData;
     private final int totalPopulation;
 
-    // Private constructor to enforce builder usage
     private ModuleBaseAttributes(Builder builder) {
         super(builder); // Pass the builder to the parent class constructor
-        this.minAge = builder.minAge;
-        this.maxAge = builder.maxAge;
-        this.genders = builder.genders;
-
+        this.minAge = builder.minAge != null ? builder.minAge : -1;
+        this.maxAge = builder.maxAge != null ? builder.maxAge : -1;
+        this.genders = !builder.genders.isEmpty() ? builder.genders : Arrays.asList(Gender.Female, Gender.Male);
         List<String> inputCountries = builder.countries;
 
         try {
             this.csvData = CsvLoader.readCSVFromResources("config/euro_pop.csv");
-            csvData.remove(0); // Remove the header row
+            csvData.removeFirst(); // Remove the header row
             countries = parseCsvData(csvData);
-            if(inputCountries != null)
+            if(!inputCountries.isEmpty())
                 countries.removeIf(country -> !inputCountries.contains(country.getName()));
             totalPopulation = countries.stream().mapToInt(Country::getPopulation).sum();
         } catch (IOException | CsvValidationException e) {
             throw new RuntimeException("Failed to load CSV data", e);
         }
     }
-
-    // Builder class extending Module.ModuleBuilder
-    public static class Builder extends Module.ModuleBuilder<ModuleBaseAttributes, Builder> {
-
-        private int minAge; // Default value
-        private int maxAge; // Default value
-        private List<String> countries = new ArrayList<>();
-        private List<Gender> genders = new ArrayList<>();
-
-        // Builder setter methods
-        public Builder setMinAge(int minAge) {
-            this.minAge = minAge;
-            return this;
-        }
-
-        public Builder setMaxAge(int maxAge) {
-            this.maxAge = maxAge;
-            return this;
-        }
-
-        public Builder setCountries(List<String> countries) {
-            this.countries = countries;
-            return this;
-        }
-
-        public Builder setGenders(List<Gender> genders) {
-            this.genders = genders;
-            return this;
-        }
-
-        @Override
-        protected Builder self() {
-            return this;
-        }
-
-        @Override
-        public ModuleBaseAttributes build() {
-            return new ModuleBaseAttributes(this);
-        }
-    }
-
     // Parsing CSV data
     private List<Country> parseCsvData(List<String[]> input) {
         List<Country> countries = new ArrayList<>();
@@ -216,5 +177,44 @@ public class ModuleBaseAttributes extends Module {
         patient.getAttributes().put("age", age);
         patient.getAttributes().put("gender", gender);
         return patient;
+    }
+
+    // Builder class extending Module.ModuleBuilder
+    public static class Builder extends Module.ModuleBuilder<ModuleBaseAttributes, Builder> {
+
+        private Integer minAge;
+        private Integer maxAge;
+        private List<String> countries = new ArrayList<>();
+        private List<Gender> genders = new ArrayList<>();
+
+        public Builder setMinAge(int minAge) {
+            this.minAge = minAge;
+            return this;
+        }
+
+        public Builder setMaxAge(int maxAge) {
+            this.maxAge = maxAge;
+            return this;
+        }
+
+        public Builder setCountries(List<String> countries) {
+            this.countries = countries;
+            return this;
+        }
+
+        public Builder setGenders(List<Gender> genders) {
+            this.genders = genders;
+            return this;
+        }
+
+        @Override
+        protected Builder self() {
+            return this;
+        }
+
+        @Override
+        public ModuleBaseAttributes build() {
+            return new ModuleBaseAttributes(this);
+        }
     }
 }
